# warpsim

./: CMakeLists.txt  README.md
.github/workflows/: ci.yml
cmake/: warpsimConfig.cmake.in
docs/: airplanes_missile_aoi_demo.md  aoi.md  committed_output.md  integrating_with_cmake.md  logging.md  migration.md  modeler_intro.md  modeling_contract.md  random.md  state_store.md
examples/: CMakeLists.txt  airplanes_missile_aoi_demo.cpp  airport_fujimoto.cpp  demo.cpp  entity_migration_demo.cpp  market_demo.cpp  phold_mpi.cpp  radar_explosion_demo.cpp  regional_airport_migration_demo.cpp
src/: CMakeLists.txt  aoi_client.hpp  aoi_lp.hpp  common.hpp  determinism.hpp  directory_lp.hpp  event.hpp  event_dispatcher.hpp  event_wire.hpp  log.hpp  lp.hpp  migration.hpp  modeling.hpp  mpi_collectives.hpp  mpi_transport.hpp  optimistic_migration.hpp  random.hpp  simulation.hpp  state_store.hpp  transport.hpp  wire.hpp  world.hpp
tests/: CMakeLists.txt  anti_before_event_test.cpp  anti_tombstone_survives_rollback_test.cpp  cancellation_map_rollback_test.cpp  committed_event_trace_determinism_test.cpp  committed_output_test.cpp  directory_lp_unit_test.cpp  entity_snapshot_rollback_test.cpp  fossil_collection_test.cpp  gvt_safe_migration_test.cpp  migration_wire_roundtrip_test.cpp  modeling_helpers_test.cpp  mpi_ack_inflight_exactly_once_test.cpp  mpi_colored_gvt_committed_flush_test.cpp  mpi_determinism_digest_invariance_test.cpp  mpi_entity_migration_policy_test.cpp  mpi_fossil_collection_test.cpp  mpi_multirank_gvt_termination_test.cpp  mpi_optimistic_migration_directory_test.cpp  mpi_optimistic_migration_straggler_rollback_test.cpp  mpi_receiver_rollback_anti_cancels_committed_test.cpp  mpi_smoke_test.cpp  mpi_transport_delivery_test.cpp  optimistic_migration_directory_test.cpp  optimistic_migration_payloads_test.cpp  randomized_rollback_stress_determinism_test.cpp  rollback_anti_test.cpp  rollback_snapshot_oldest_anti_test.cpp  run_one_rollback_test.cpp  sent_log_rollback_emits_anti_test.cpp  sequence_restored_on_rollback_test.cpp  state_history_basic_test.cpp  state_history_drop_after_test.cpp  state_history_trim_test.cpp  targeted_event_requires_routing_test.cpp  timestamp_sequence_autofill_test.cpp  uid_determinism_test.cpp  wire_truncation_decode_test.cpp
tests/cmake_integration/: find_package_install_test.cmake
tests/cmake_integration/consumer/: CMakeLists.txt  main.cpp
